objects/NAICS__c.object
<CustomObject>
    <fields>
        <fullName>Index_Name__c</fullName>
        <label>Index Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Group_Name__c</fullName>
        <label>Industry Group Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Group__c</fullName>
        <label>Industry Group</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Name__c</fullName>
        <label>Industry Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector_Name__c</fullName>
        <label>Sector Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Sector_Name__c</fullName>
        <label>Sub Sector Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Sector__c</fullName>
        <label>Sub Sector</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>NAICS</label>
    <nameField>
        <label>NAICS Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NAICS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>